syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "ShoppingListProto";

package shoppinglist;

service ShoppingListService {
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc GetProduct (GetProductRequest) returns (ProductResponse);
  rpc GetAllProducts (GetAllProductsRequest) returns (stream ProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
  rpc MarkAsPurchased (MarkAsPurchasedRequest) returns (ProductResponse);
}

message CreateProductRequest {
  string name = 1;
  int32 quantity = 2;
  string category = 3;
}

message GetProductRequest {
  string id = 1;
}

message GetAllProductsRequest {
  bool include_purchased = 1;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
  string category = 4;
}

message DeleteProductRequest {
  string id = 1;
}

message MarkAsPurchasedRequest {
  string id = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
  string category = 4;
  bool purchased = 5;
  string created_at = 6;
  string updated_at = 7;
}

message DeleteProductResponse {
  bool success = 1;
  string message = 2;
}
